--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<header class="header-area">
 			<nav class="navbar navbar-2 navbar-expand-lg">
 				<div class="container position-relative">
-					<a class="navbar-brand" href="http://cyl518.ddns.net:22/pytv/">
+					<a class="navbar-brand" href="#">
 						<img src="static/picture/1233.png" alt="涛涛影视 TV Box">
 					</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
